# tushino

./: README.md
Task1/: Task1.cpp
Task2/: 2.cpp
Task3/: Task3.cpp
Task5/: 5.cpp
Task6/: 6.cpp
Task8/: 8.cpp
Task9/: 9.cpp
project1/: main.c  test3.txt  text.txt
project1/headers/: head.h
project1/libs/: io.c  main.c  menu.c  task.c
project3/: 1.cpp  3.cpp  7_extended.cpp
project3/10/: 10.c
project3/2/: 2.c
project3/4/: 4.cpp
project3/5/: 5.cpp
project3/6/: 6.cpp
project3/7/: 7.cpp
project3/8/: 8.c
project3/9/: 9.cpp
project4/: .gitignore  1.c  1.cpp  1.txt  10.c  2.c  2.cpp  4.c  7.c  8.cpp  a2  a3  a4
project4 (ProCalc)/: README  README.md
project4 (ProCalc)/src/: .gitignore  Makefile.am  main.cpp
project4 (ProCalc)/src/headers/: Combinatorics.h  TeoriaVer.h  bigint.h  config.h  fraction.h  func_menu.h  graph.h  header.h  input.h  integral.h  matrix.h  polynom.h  root.h
project4 (ProCalc)/src/libs/: Combinatorics.cpp  Combinatorics_menu.cpp  bigint.cpp  fraction.cpp  fraction_menu.cpp  func.ter.ver.cpp  func_menu.cpp  graph.cpp  input.cpp  integral.cpp  main_menu.cpp  matrix.cpp  matrix_main.cpp  polynom.lib.cpp  polynom.main.cpp  root.cpp  ter.ver.menu.cpp
project4/libs/: ex4.c
project5 (ProTest)/doc/: DB.md
project5 (ProTest)/src/files/: Arrays.txt  Cycles_en.txt  Recursion_en.txt  Strings_en.txt
project6/: 1.txt  3.cpp  4.c  6.cpp  6.txt  7.txt  8.txt
